# scraper

./: .dockerignore  .gitignore  Dockerfile  mise.toml  origin_regions.json  pyproject.toml  roasters.json  rules.json  samconfig.toml  spacy_base_config.cfg  template.yaml  text.py
.github/workflows/: build.yml
classifier/: prepare_data.py  train.py
classifier/rules/: cafecayo.myshopify.com.json  cafesbelleville.com.json  cafesmoody.com.json  coffeecollective.dk.json  colors.coffee.json  dose.paris.json  earlybirdcoffee.fr.json  gaiatorrefacteur.com.json  gramgram.fr.json  kbcoffeeroasters.com.json  koppi.se.json  lecafecerise.fr.json  minifundi.coffee.json  moklair.fr.json  nomadcoffee.es.json  shop.cafes-celtik.fr.json  shop.squaremilecoffee.com.json  somospuchero.com.json  tanat.coffee.json  thebeansonfire.com.json  www.alba-coffeeroasters.fr.json  www.alchimiste-cafes.com.json  www.blackwhiteroasters.com.json  www.cafepiha.com.json  www.coutumecafe.com.json  www.frukt.coffee.json  www.hayuco.coffee.json  www.lacafeotheque.com.json  www.loutsa.fr.json  www.owlbrothers.com.json  www.parispartisancafe.com.json  www.seycoffee.com.json  www.voltcafebrulerie.com.json
extractors/: mistral.py
lambda/functions/: classifier.py  crawler.py  domain_lister.py  exporter.py  llm.py  sync_session.py
scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/lib/: shopify.py  (+4 more)
scripts/: cleanup_layer.sh
tests/: test_shopify.py  test_validators.py
validators/: __init__.py  country.py  farm.py  pricePerKilo.py  processes.py  producer.py  region.py  varieties.py
(+7 files in other folders)
