[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gql>=4.0.0",
    "lxml==6.0.0",
    "pydantic>=2.11.7",
    "python-ulid>=3.1.0",
    "crochet>=2.1.1",
    "aiohttp>=3.12.15",
    "langchain-mistralai>=0.2.11",
    "pillow>=11.3.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "pyright>=1.1.403",
    "ruff>=0.12.9",
    "ipykernel>=6.30.1",
    "pandas==2.3.1",
    "boto3>=1.40.15",
    "requests>=2.32.4",
]

ml = [
    "scikit-learn>=1.7.1",
    "scrapy>=2.13.3",
    "spacy>=3.8.7",
]
